# velox

./: AGENTS.md  Cargo.toml  Dockerfile  README.md  package.json  roadmap.md
.github/workflows/: docker.yml
examples/: base64.js  basic.test.ts  clone.js  demo.ts  encoding.js  graceful_shutdown_test.ts  hono_router.js  hono_test.ts  interval.js  main.js  main.ts  microtask.js  permissions_test.ts  quick_worker_test.js  server.js  server_onerror_test.js  server_typescript.ts  server_web_api.js  simple_worker.js  test_web_api.js  timers.js  timers.ts  url.js  velox.d.ts  worker_script.js  worker_test.ts
examples/module_test/: check_main.ts  greet.ts  import_map.json  main.ts  test_default.ts  test_dynamic_import.ts  test_dynamic_import2.ts  test_import_map.ts  test_import_meta.ts  test_import_meta_main.ts  test_node_modules.ts  utils.ts
examples/module_test/lib/: math.ts
src/: colors.rs  event_loop.rs  main.rs  modules.rs  permissions.rs  repl.rs  runtime.rs  shutdown.rs  transpiler.rs  watch.rs
src/builtins/: clone.rs  console.rs  crypto.rs  encoding.rs  exec.rs  fetch.rs  fs.rs  microtask.rs  mod.rs  path.rs  performance.rs  process.rs  serve.rs  timers.rs  url.rs  web_api.rs  worker.rs
src/pkg/: cache.rs  mod.rs  reporter.rs  tree.rs
templates/: velox.d.ts
