[package]
name = "velox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "velox"
path = "src/main.rs"

[dependencies]
rusty_v8 = "0.32.1"
rustyline = "14"
ureq = "2"
tiny_http = "0.12"
serde_json = "1"
notify = "6"
notify-debouncer-mini = "0.4"
oxc_allocator = "0.116"
oxc_parser = "0.116"
oxc_codegen = "0.116"
oxc_span = "0.116"
oxc_transformer = "0.116"
oxc_semantic = "0.116"
ctrlc = "3.4"
flate2 = "1"
tar = "0.4"
semver = "1"
